--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,42 +1,36 @@
 ---
-import { cn } from '../utils/utils'
-const { id, text, about, fromColor, toColor, btnText } = Astro.props
+interface Props {
+	color: 'red' | 'green' | 'blue' | 'purple'
+	btnText: string
+	text: string
+	about: string
+}
+
+import { backgroundVariants } from '../utils/state'
+const { color, text, about, btnText } = Astro.props
+
+const buttonVariants = {
+	blue: `group-hover:${backgroundVariants[color]}`,
+	red: `group-hover:${backgroundVariants[color]}`,
+	green: `group-hover:${backgroundVariants[color]}`,
+	purple: `group-hover:${backgroundVariants[color]}`
+}
 ---
 
 <div
-	id={`${fromColor}-${toColor}`}
-	class="card flex h-[180px] max-h-full w-[300px] flex-col items-center justify-center bg-emerald-500 bg-white/5 text-center backdrop-blur transition first:rounded-l-3xl last:rounded-r-3xl hover:scale-[1.02] hover:bg-white/10 max-[768px]:w-full max-[768px]:first:rounded-b max-[768px]:first:rounded-t-3xl max-[768px]:last:rounded-b-3xl max-[768px]:last:rounded-t"
+	hx-get="/header"
+	hx-target="#header"
+	hx-swap="innerHTML"
+	hx-trigger="mouseenter"
+	hx-vals=`{"color": "${color}"}`
+	id={color}
+	class="group relative z-20 flex h-[200px] max-h-full w-[300px] cursor-default flex-col items-center justify-center bg-emerald-500 bg-white/5 text-center backdrop-blur transition first:rounded-l-3xl last:rounded-r-3xl hover:scale-[1.02] hover:bg-white/10 max-[768px]:w-full max-[768px]:first:rounded-b max-[768px]:first:rounded-t-3xl max-[768px]:last:rounded-b-3xl max-[768px]:last:rounded-t"
 >
 	<h3 class="text-2xl">{text}</h3>
 	<p class="my-4 break-words text-white/50">{about}</p>
-	<button class="rounded-2xl bg-white p-2 px-3 text-zinc-500 transition-all duration-200"
+	<button
+		id="btn"
+		class={`rounded-2xl bg-white p-2 px-3 text-sm text-black transition-all duration-200 ${buttonVariants[color || 'white']} group-hover:text-white`}
 		>{btnText}
 	</button>
 </div>
-
-<script>
-	import { atomCOlor } from '../store'
-	const cards = document.querySelectorAll('.card') as NodeListOf<HTMLElement>
-
-	cards.forEach((card) => {
-		const colors = card.id.split('-')
-		const fromC = colors[0]
-		const toC = colors[1]
-
-		card.onmouseenter = () => {
-			const btn = card.querySelector('button')
-			btn!.style.backgroundColor = fromC
-			btn!.style.color = 'white'
-
-			atomCOlor.set({ from: fromC, to: toC })
-		}
-
-		card.onmouseleave = () => {
-			const btn = card.querySelector('button')
-			btn!.style.backgroundColor = 'white'
-			btn!.style.color = 'rgb(113 113 122)'
-
-			atomCOlor.set({ from: '#10b981', to: '#fde047' })
-		}
-	})
-</script>
