--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -1,5 +1,6 @@
 <div
-	class="flex h-12 w-12 cursor-pointer flex-col justify-center gap-1 rounded-full p-3 transition hover:bg-white/10"
+	@click="open = !open"
+	class="-mr-3 flex h-12 w-12 cursor-pointer flex-col justify-center gap-1 rounded-full p-3 transition hover:bg-white/10"
 >
 	<div class="h-[2px] rounded bg-white/40"></div>
 	<div class="h-[2px] rounded bg-white/40"></div>
