--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,10 +1,10 @@
 ---
 import Card from '../components/Card.astro'
 import Header from '../pages/header.astro'
-import { cards } from '../utils/state'
+import { cards } from '../state'
 ---
 
-<div class="relative flex h-full w-full flex-col items-center justify-evenly px-6 max-[768px]:p-2">
+<div class="relative flex h-full w-full flex-col items-center justify-evenly px-8 max-[768px]:p-4">
 	<Header />
 	<div
 		hx-get="/header"
