--- a/src/components/List.astro
+++ b/src/components/List.astro
@@ -1,9 +1,11 @@
 ---
-const { text } = Astro.props
+const { text, url, id } = Astro.props
 ---
 
+<!-- class="mr-2 rounded-2xl px-4 py-[6px] text-white/50 transition last:mr-0 hover:bg-white/10 hover:text-white" -->
 <li
-	class="mr-2 rounded-2xl px-4 py-[6px] text-white/50 transition last:mr-0 hover:bg-white/10 hover:text-white"
+	class="text-white/70 transition last:mr-0 hover:bg-white/10 hover:text-white"
+	x-bind:class="! open ? 'mr-2 rounded-2xl px-4 py-[6px]' : 'w-full transition cursor-pointer hover:bg-white/10 py-3 px-4 text-sm hover:underline'"
 >
-	<a href={`/${text.toLowerCase()}`}> {text} </a>
+	<a href={url}> {text} </a>
 </li>
